feat: connect product-service version 2 and use session for cart